overboard/platform/development/deployment_replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overboard
spec:
  replicas: 1
