overboard/platform/development/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: overboard
spec:
  rules:
    - host: api-development.igiari.net
      http:
        paths:
          - backend:
              serviceName: overboard
              servicePort: 80
            path: /
